// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Able to override relationship names related array 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

export type Error = {
    code: number;
    source: string;
    message: string;
    detail: string;
};

export type Request<T> = {
    input?: T;
};

export type Response<T> = {
    data?: T;
    errors: Array<Error>;
    status: number;
};

export type ListRequest<T> = {
    /**
     * A search string to filter the list by.
     * Will match starting string in index text. Case insensitive.
    */
    indexTerm: string;
    nextToken: string;
};

export type ListResponse<T> = {
    data?: Array<T>;
    errors: Array<Error>;
    status: number;
};

/**
 * Public facing data structure for this record.
*/
export type Foo = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
    /**
     * Array of bar records.
    */
    bazzes: Array<Bar>;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type FooData = {};

export type CreateFooInput = {};

export type CreateFooOutput = {};

export type GetFooInput = {};

export type GetFooOutput = {};

export type UpdateFooInput = {};

export type UpdateFooOutput = {};

export type DeleteFooInput = {};

export type DeleteFooOutput = {};

/**
 * Public facing data structure for this record.
*/
export type Bar = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type BarData = {};

export type CreateBarInput = {};

export type CreateBarOutput = {};

export type GetBarInput = {};

export type GetBarOutput = {};

export type UpdateBarInput = {};

export type UpdateBarOutput = {};

export type DeleteBarInput = {};

export type DeleteBarOutput = {};
"
`;

exports[`success conditions Able to add related array 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

export type Error = {
    code: number;
    source: string;
    message: string;
    detail: string;
};

export type Request<T> = {
    input?: T;
};

export type Response<T> = {
    data?: T;
    errors: Array<Error>;
    status: number;
};

export type ListRequest<T> = {
    /**
     * A search string to filter the list by.
     * Will match starting string in index text. Case insensitive.
    */
    indexTerm: string;
    nextToken: string;
};

export type ListResponse<T> = {
    data?: Array<T>;
    errors: Array<Error>;
    status: number;
};

/**
 * Public facing data structure for this record.
*/
export type Foo = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
    /**
     * Array of bar records.
    */
    bars: Array<Bar>;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type FooData = {};

export type CreateFooInput = {};

export type CreateFooOutput = {};

export type GetFooInput = {};

export type GetFooOutput = {};

export type UpdateFooInput = {};

export type UpdateFooOutput = {};

export type DeleteFooInput = {};

export type DeleteFooOutput = {};

/**
 * Public facing data structure for this record.
*/
export type Bar = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type BarData = {};

export type CreateBarInput = {};

export type CreateBarOutput = {};

export type GetBarInput = {};

export type GetBarOutput = {};

export type UpdateBarInput = {};

export type UpdateBarOutput = {};

export type DeleteBarInput = {};

export type DeleteBarOutput = {};
"
`;

exports[`success conditions Able to add related map 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

export type Error = {
    code: number;
    source: string;
    message: string;
    detail: string;
};

export type Request<T> = {
    input?: T;
};

export type Response<T> = {
    data?: T;
    errors: Array<Error>;
    status: number;
};

export type ListRequest<T> = {
    /**
     * A search string to filter the list by.
     * Will match starting string in index text. Case insensitive.
    */
    indexTerm: string;
    nextToken: string;
};

export type ListResponse<T> = {
    data?: Array<T>;
    errors: Array<Error>;
    status: number;
};

/**
 * Public facing data structure for this record.
*/
export type Foo = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
    /**
     * Map of bar records.
    */
    bars: Record<string, Bar>;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type FooData = {};

export type CreateFooInput = {};

export type CreateFooOutput = {};

export type GetFooInput = {};

export type GetFooOutput = {};

export type UpdateFooInput = {};

export type UpdateFooOutput = {};

export type DeleteFooInput = {};

export type DeleteFooOutput = {};

/**
 * Public facing data structure for this record.
*/
export type Bar = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type BarData = {};

export type CreateBarInput = {};

export type CreateBarOutput = {};

export type GetBarInput = {};

export type GetBarOutput = {};

export type UpdateBarInput = {};

export type UpdateBarOutput = {};

export type DeleteBarInput = {};

export type DeleteBarOutput = {};
"
`;

exports[`success conditions Able to add related resource 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

export type Error = {
    code: number;
    source: string;
    message: string;
    detail: string;
};

export type Request<T> = {
    input?: T;
};

export type Response<T> = {
    data?: T;
    errors: Array<Error>;
    status: number;
};

export type ListRequest<T> = {
    /**
     * A search string to filter the list by.
     * Will match starting string in index text. Case insensitive.
    */
    indexTerm: string;
    nextToken: string;
};

export type ListResponse<T> = {
    data?: Array<T>;
    errors: Array<Error>;
    status: number;
};

/**
 * Public facing data structure for this record.
*/
export type Foo = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
    bar: Bar;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type FooData = {};

export type CreateFooInput = {};

export type CreateFooOutput = {};

export type GetFooInput = {};

export type GetFooOutput = {};

export type UpdateFooInput = {};

export type UpdateFooOutput = {};

export type DeleteFooInput = {};

export type DeleteFooOutput = {};

/**
 * Public facing data structure for this record.
*/
export type Bar = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
};

/**
 * Private data structure for this record.
 * Used internally in Dynamo, SQS and other native services.
*/
export type BarData = {};

export type CreateBarInput = {};

export type CreateBarOutput = {};

export type GetBarInput = {};

export type GetBarOutput = {};

export type UpdateBarInput = {};

export type UpdateBarOutput = {};

export type DeleteBarInput = {};

export type DeleteBarOutput = {};
"
`;
